--- a/app/page/page.module.css
+++ b/app/page/page.module.css
@@ -128,3 +128,9 @@ transform: translateX(5px);
     width: 100%;
     gap: 15px;
 }
+
+@media (max-width:720px) {
+    .mava_txt {
+        margin: 15px;
+    }
+}
